Fixed login/logout icon being too close to edge

--- a/web/assets/css/partials/_header.scss
+++ b/web/assets/css/partials/_header.scss
@@ -143,6 +143,10 @@ body {
 
                     &.user {
                         float: right;
+
+                        @include respond-to(tablets) {
+                            margin-right: 10px;
+                        }
                     }
                 }
             }
